fixed home page button

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 <body id = "Main">
   <header>
     <div class="nav-container">
-      <h1 class="logo" onclick="poopypants()">Scams</h1>
+      <h1 class="logo" onclick="poopypants()"><a class="logo" href="index.html">SecureSteps</a></h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
           <li><a href="restrict.html">Restrict</a></li>
           <li><a href="recognise.html">Recognise</a></li>
           <li><a href="resolve.html" style="text-decoration: none;">Resolve</a></li>
