i hate commit names

--- a/about.html
+++ b/about.html
@@ -27,9 +27,8 @@
 
   <main>
     <section class="hero">
-      <h2>Welcome to StuddyBuddy</h2>
-      <a href="secret.html"><img width="400" src="images\StuddyBuddyLogo.png"></a>
-      <p>Your one-stop destination for staying productive while keeping your mind fresh.</p>
+      <h2>About Us</h2>
+      <p>Max Sam and Cody.</p>
     </section>
   </main>
 
