--- a/recoginse.html
+++ b/recoginse.html
@@ -27,9 +27,10 @@
 
   <main>
     <section class="hero">
-      <h2>Welcome to StuddyBuddy</h2>
-      <a href="secret.html"><img width="400" src="images\StuddyBuddyLogo.png"></a>
-      <p>Your one-stop destination for staying productive while keeping your mind fresh.</p>
+      <h1>Recognise</h1>
+      <h2>What are the ways to tell if things are a scam?</h2>
+      <p></p>
+      
     </section>
   </main>
 
