fixed some stuff idfk

--- a/recognise.html
+++ b/recognise.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StuddyBuddy</title>
+  <title>Recognise</title>
   <link rel="icon" href="images\StuddyBuddyLogo.png">
   <link rel="stylesheet" href="style.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1331485902870287"
@@ -29,7 +29,7 @@
     <section class="hero">
       <h1>Recognise</h1>
       <h2>What are the ways to tell if things are a scam?</h2>
-      <p></p>
+      <p>This is the page to check if you think you have been scammed. There are so many different types of scams, its kind of hard to keep track of them all. This page will have tell you how to recognise them, just in case you think you have already fallen for one.</p>
       
     </section>
   </main>
