knuckles on the suckles

--- a/about.html
+++ b/about.html
@@ -16,9 +16,16 @@
       <h1 class="logo" onclick="poopypants()"><a class="logo" href="index.html">SecureSteps</a></h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="restrict.html">Restrict</a></li>
-          <li><a href="recognise.html">Recognise</a></li>
-          <li><a href="resolve.html" style="text-decoration: none;">Resolve</a></li>
+          <div class="dropdown">
+            <button class="dropbtn">Scams
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="restrict.html">Restrict</a>
+              <a href="recoginse.html">Recognise</a>
+              <a href="resolve.html">Resolve</a>
+            </div>
+          </div>
           <li><a href="about.html">About Us</a></li>
         </ul>
       </nav>
