--- a/resolve.html
+++ b/resolve.html
@@ -16,9 +16,16 @@
       <h1 class="logo" onclick="poopypants()"><a class="logo" href="index.html">SecureSteps</a></h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="restrict.html">Restrict</a></li>
-          <li><a href="recognise.html">Recognise</a></li>
-          <li><a href="resolve.html" style="text-decoration: none;">Resolve</a></li>
+          <div class="dropdown">
+            <button class="dropbtn">Scams
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="restrict.html">Restrict</a>
+              <a href="recoginse.html">Recognise</a>
+              <a href="resolve.html">Resolve</a>
+            </div>
+          </div>
           <li><a href="about.html">About Us</a></li>
         </ul>
       </nav>
@@ -27,8 +34,8 @@
 
   <main>
     <section class="hero">
-      <h1>Recognise</h1>
-      <h2>What are the ways to tell if things are a scam?</h2>
+      <h1>Resolve</h1>
+      <h2>What do to if you have been scammed?</h2>
       <p></p>
       
     </section>
