rewrote entire main frame. btoke into the pentagon. and went for coffee

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             </button>
             <div class="dropdown-content">
               <a href="restrict.html">Restrict</a>
-              <a href="recoginse.html">Recognise</a>
+              <a href="recognise.html">Recognise</a>
               <a href="resolve.html">Resolve</a>
             </div>
           </div>
