--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </button>
             <div class="dropdown-content">
               <a href="restrict.html">Restrict</a>
-              <a href="recoginse.html">Recognise</a>
+              <a href="recognise.html">Recognise</a>
               <a href="resolve.html">Resolve</a>
             </div>
           </div>
@@ -30,9 +30,15 @@
     </div>
   </header>
 
-  <main>
-  
+  <main>  
+    <section class="hero">
+    <h1>SecureSteps</h1>
+    <img src="image.png" style="width:10%">
+    <p class="mainp">
+      With the rise of the internet, scams are more prevalent. It is more vital than ever that you keep on top of everything, to make sure that your information is secure. This website will give you all the tips you need to stay smart online.
+    </p>
   </main>
+  </section>
 
   <footer>
     <p>&copy; 2025 CodyMody Corp. All rights reserved.</p>
