i dont care i hate my life

--- a/restrict.html
+++ b/restrict.html
@@ -16,16 +16,9 @@
       <h1 class="logo" onclick="poopypants()"><a class="logo" href="index.html">SecureSteps</a></h1>
       <nav>
         <ul class="nav-links">
-          <div class="dropdown">
-            <button class="dropbtn">Scams
-              <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-              <a href="restrict.html">Restrict</a>
-              <a href="recognise.html">Recognise</a>
-              <a href="resolve.html">Resolve</a>
-            </div>
-          </div>
+          <li><a href="restrict.html">Restrict <img src="shield.png" style="width:20px;"></a></li>
+          <li><a href="recognise.html">Recognise</a></li>
+          <li><a href="resolve.html">Resolve</a></li>
           <li><a href="about.html">About Us</a></li>
         </ul>
       </nav>
@@ -33,11 +26,42 @@
   </header>
 
   <main>
-    <section class="hero">
-      <h1>Restrict</h1>
-      <h2>What are the common scams that people run into?</h2>
-      <p></p>
+    <section class="hero2">
       
+      <h2>Keep a lock on your digital door!</h2>
+      <p>Scamming is the art of deception and scammers are always getting smarter. Scammers have cracks in the stories, and you can uncover their true nature through being alert and aware. To recognize scams, you have to double check yourself and think, is this legitimate? If you feel unsure about a statement you have received, you are urged to always check the official website or check if there have been any reports of suspicious activity about this information. If you are still not quite sure you should use the stop, check and protect strategy for further confirmation. </p>
+      <br>
+      <h3 class="h3title">STOP</h3>
+      <img src="stop sign.png" style="float:right"> 
+      <ul>
+        <li>Never rush into decisions and especially while money and personal information is being interpreted into the scam.</li>
+        <li>Pause before clicking links, responding to messages or making rushed payments. </li>
+      </ul>
+      <br>
+      <h3 class="h3title">CHECK</h3>
+      <ul>
+        <li>Always think and ask yourself if this is believable or is it fake.</li>
+        <li>Always verify the sender or caller by yourself as they could always fake appearances especially as AI continues to rapidly improve over the coming years.</li>
+        <li>Always be suspicious of pressure tactics and emotional appeals as it can be a rushed decision of you committing to something that isn’t right. </li>
+      </ul>
+      <br>
+      <h3 class="h3title">PROTECT</h3>
+      <ul>
+        <li>If you’ve been scammed act quickly and contact the organization of where you have been scammed and report it to scam watch. </li>
+        <li>Always stay alert and never fall asleep on your common duties and sense of care even if you have been targeted before scammers often retarget victims. </li>
+        <li>Keep all your personal belongings and details safe online and in person.</li>
+      </ul>
+      <br>
+      <p>Scammers rely on the stress and urgency of their victim; they can distract you and trick you. Always think to slow down and be critical of everything you feel is suspicious. Scammers use many psychological tricks to deceive and get through to their victims. Some of these common tricks look like: </p>
+      <ul>
+        <li>Spoofing</li>
+        <li>Phising</li>
+        <li>Fake profiles</li>
+        <li>Fake photos</li>
+        <li>Fake entities</li>
+      </ul>
+      <br>
+      <p>These tactics are designed to go through your scepticism by looking and sounding similar to your everyday things which why you shall always stay alert and verify sources. Another strategy to ensure your safety includes enabling 2 factor authentication on your devices, accounts and emails, to use strong and unique passwords, and adopt passkeys. As shown this strategy and information are vital practices to restrict the possibility of scams and the damage of scams. </p>
     </section>
   </main>
 
