are you sure those re thre letter wanna guess???

--- a/resolve.html
+++ b/resolve.html
@@ -31,14 +31,12 @@
       </nav>
     </div>
   </header>
-
   <main>
-    <section class="hero">
-      <h1>Resolve</h1>
+      <div type="banner">
+        <img src="banner.jpg" alt="resolve">
+      </div>
       <h2>What do to if you have been scammed?</h2>
       <p></p>
-      
-    </section>
   </main>
 
   <footer>
