--- a/recognise.html
+++ b/recognise.html
@@ -35,11 +35,24 @@
   </header>
 
   <main>
-    <section class="hero">
+    <section class="hero2">
       <h1>Recognise</h1>
-      <h2>What are the ways to tell if things are a scam?</h2>
-      <p>This is the page to check if you think you have been scammed. There are so many different types of scams, its kind of hard to keep track of them all. This page will have tell you how to recognise them, just in case you think you have already fallen for one.</p>
-      
+      <h2>Scams don’t wait, neither should you.</h2>
+      <p>Scams can happen at the speed of light, often within minutes to seconds online scams can happen hence why recognizing these scams is so important. Scammers act when victims respond quickly to messages without thinking and click links or share sensitive information without verifying the source. According to the statistics Scamwatch has gathered, scammers are increasingly using real world time methods like calls and social media to create the pressure and urgency on their victims that result in the rapid losses of innocent people.</p>
+      <iframe width="427" height="240" src="https://www.youtube.com/embed/cyaUWTFLw3c" title="How to Spot a Scam" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="float:right; border: 10px solid #ffffff;"></iframe>
+      <br>
+      <p>To recognise scms you must begin with understanding the types of tactics and tricks they utilise within their actions. A huge factor in scamming is the sign of urgency that force you to act immediately by making statements that aren’t and create a message of worry. Impersonations are scams that trap the most people through using organization name or services to look legitimate or real to elderly people. Some main indicators for scams include spelling errors, suspicious links or specific requests.</p>
+      <br>
+      <p>Several scams’ people should learn to recognise include:</p>
+      <ul>
+        <li>Phishing Scams</li>
+        <li>Phone scams (SMS and calls)</li>
+        <li>Social media scams</li>
+        <li>Investment scams</li>
+        <li>Romance scams</li>
+      </ul>
+      <br>
+      <p>When people are alert by verification and recognising suspicious things before they respond they are the second step to protecting themselves to falling victim to scams. Education and awareness are the first guides to restricting and then recognising online scams.</p>
     </section>
   </main>
 
