--- a/resolve.html
+++ b/resolve.html
@@ -35,9 +35,10 @@
     </div>
   </header>
   <main>
-      <div type="banner">
-        <img src="banner.jpg" alt="resolve">
+      <div class="banner">
+      Resolve
       </div>
+
       <h2>What do to if you have been scammed?</h2>
       <p></p>
   </main>
