added banner f you

--- a/resolve.html
+++ b/resolve.html
@@ -35,12 +35,14 @@
     </div>
   </header>
   <main>
+    <section class="hero2">
       <div class="banner">
       Resolve
       </div>
 
       <h2>What do to if you have been scammed?</h2>
       <p></p>
+    </section>
   </main>
 
   <footer>
