--- a/recognise.html
+++ b/recognise.html
@@ -37,7 +37,9 @@
 
   <main>
     <section class="hero2">
-      <h1>Recognise</h1>
+      <div class="banner2">
+      Recognise
+      </div>
       <h2>Scams don’t wait, neither should you.</h2>
       <p>Scams can happen at the speed of light, often within minutes to seconds online scams can happen hence why recognizing these scams is so important. Scammers act when victims respond quickly to messages without thinking and click links or share sensitive information without verifying the source. According to the statistics Scamwatch has gathered, scammers are increasingly using real world time methods like calls and social media to create the pressure and urgency on their victims that result in the rapid losses of innocent people.</p>
       <iframe width="427" height="240" src="https://www.youtube.com/embed/cyaUWTFLw3c" title="How to Spot a Scam" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="float:right; border: 10px solid #ffffff;"></iframe>
