--- a/restrict.html
+++ b/restrict.html
@@ -37,7 +37,9 @@
 
   <main>
     <section class="hero2">
-      
+      <div class="banner1">
+      Restrict
+      </div>
       <h2>Keep a lock on your digital door!</h2>
       <p>Scamming is the art of deception and scammers are always getting smarter. Scammers have cracks in the stories, and you can uncover their true nature through being alert and aware. To recognize scams, you have to double check yourself and think, is this legitimate? If you feel unsure about a statement you have received, you are urged to always check the official website or check if there have been any reports of suspicious activity about this information. If you are still not quite sure you should use the stop, check and protect strategy for further confirmation. </p>
       <br>
