--- a/recognise.html
+++ b/recognise.html
@@ -37,7 +37,7 @@
 
   <main>
     <section class="hero2">
-      <div class="banner2">
+      <div class="banner" style="background-image: url(banner.jpg);">
       Recognise
       </div>
       <h2>Scams don’t wait, neither should you.</h2>
