--- a/restrict.html
+++ b/restrict.html
@@ -37,7 +37,7 @@
 
   <main>
     <section class="hero2">
-      <div class="banner1">
+      <div class="banner">
       Restrict
       </div>
       <h2>Keep a lock on your digital door!</h2>
