added reslove info

--- a/resolve.html
+++ b/resolve.html
@@ -39,9 +39,19 @@
       <div class="banner">
       Resolve
       </div>
-
       <h2>What do to if you have been scammed?</h2>
-      <p></p>
+      <p>Once you have attempted to restrict and recognise the scams the next efficient step is to resolve the situation effectively. Taking immediate action is very important as scammers love when their victims are hesitating and confused. If you think you have been scammed, the beginning thing you should do is to contact the platform that is involved and you need to report the incident. You should also report the scams or incidents to these listed organizations:</p>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlYJ6ouOEhJjJOQ-yrQKXJjbLnUu9uqAyX5Q&s" style="float:right"> 
+      <ul>
+        <li>Report cybercrime and abuse through ReportCyber</li>
+        <li>If you’ve sent money contact your financial institution</li>
+        <li>Report online scams to National Anti-Scam Centre - Scamwatch</li>
+        <li>Contact the Australian Scams and Identity Theft Helpdesk if you’ve been scammed by someone impersonating a federal employee</li>
+        <li>Contact IDCARE if your information is at risk from a data breach</li>
+        <li>You must contact the ATO to report all tax-related security issues</li>
+        <li>Contact ASIC to report financial misconduct, such as superannuation and crypto-asset scams</li>
+      </ul>
+      <p>Its very significant to know that scammers retarget victims so if you stay alert you will likely not be scammed again. You should always keep records of communications and actions taken. You need to educate yourself on scam tacts. Resolution isn’t about recovery but building resilience for the future.</p>
     </section>
   </main>
 
