--- a/references.html
+++ b/references.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StuddyBuddy</title>
-  <link rel="icon" href="images\StuddyBuddyLogo.png">
-  <link rel="stylesheet" href="style.css" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1331485902870287"
-     crossorigin="anonymous"></script>
-  
+  <title>SecureSteps - References</title>
+  <link rel="icon" href="">
+  <link rel="stylesheet" href="style.css" />  
 </head>
 <body id = "Main">
   <header>
@@ -38,6 +35,7 @@
   <main>
     <section class="hero2">
       <h1>References</h1>
+      <br>
      <h2>Cody's References</h2>
      <p>Australian Competition and Consumer Commission. (2025). Scams. Retrieved from Australian Competition & Consumer Commission: https://www.accc.gov.au/consumers/stay-protected/scams</p>
      
@@ -50,13 +48,20 @@
      <p>How To Avoid a Scam. (n.d.). Retrieved from FTC: https://consumer.ftc.gov/articles/how-avoid-scam
 Queensland Government. (2021, March 22). Your Consumer Rights. Retrieved from Office of Fair Trading: https://www.qld.gov.au/law/your-rights/consumer-rights-complaints-and-scams/consumer-advice-rights-and-responsibilities
     </p>
-
+    <br>
     <h2>Sam's References</h2>
     <p>Australian Government. (n.d.). Help to spot and avoid scams. Retrieved from Scam Watch : https://www.scamwatch.gov.au/stop-check-protect/help-to-spot-and-avoid-scams</p>
     <p>Australian Government. (n.d.). Scam statistics. Retrieved from Scamwatch: https://www.scamwatch.gov.au/research-and-resources/scam-statistics</p>
     <p>Australian Government. (n.d.). Types of scams. Retrieved from ScamWatch: https://www.scamwatch.gov.au/types-of-scams</p>
     <p>Skiba, K. (2020, Feburary 2). 12 Tools in a Fraudster's Toolbox. Retrieved from AARP: https://www.aarp.org/money/scams-fraud/fraud-tactics/</p>
     <p>Ticha, V. (2023, September 20). Cracking the code: why people fall for scams. Retrieved from UNSW Sydney: https://www.unsw.edu.au/newsroom/news/2023/09/cracking-the-code--why-people-fall-for-scams</p>
+    <br>
+    <h2>Max's References</h2>
+    <p>Australian Cyber Security Center. (n.d.). Protect yourself. Retrieved from Cyber.gov.au: https://www.cyber.gov.au/protect-yourself#accounts</p>
+    <p>Australian Cyber Security Center. (n.d.). Report and recover from scams. Retrieved from Cyber.gov.au: https://www.cyber.gov.au/report-and-recover/recover-from/scams</p>
+    <p>Money Smart. (n.d.). Protect yourself from scams. Retrieved from MoneySmart: https://www.cyber.gov.au/protect-yourself#account</p>
+    <p>MoneySmart. (n.d.). What to do if you've been scammed. Retrieved from Money Smart: https://moneysmart.gov.au/check-and-report-scams/what-to-do-if-you-ve-been-scammed</p>
+    <p>Queensland Government. (2021, March 22). Your Consumer Rights. Retrieved from Office of Fair Trading: https://www.qld.gov.au/law/your-rights/consumer-rights-complaints-and-scams/consumer-advice-rights-and-responsibilities</p>
   </section>
   </main>
 
