--- a/resolve.html
+++ b/resolve.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StuddyBuddy</title>
-  <link rel="icon" href="images\StuddyBuddyLogo.png">
+  <title>SecureSteps - Resolve</title>
+  <link rel="icon" href="">
   <link rel="stylesheet" href="style.css" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1331485902870287"
-     crossorigin="anonymous"></script>
-  
 </head>
 <body id = "Main">
   <header>
@@ -39,7 +36,7 @@
       <div class="banner">
       Resolve
       </div>
-
+      <br>
       <h2>What do to if you have been scammed?</h2>
       <p></p>
     </section>
