--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StuddyBuddy</title>
-  <link rel="icon" href="images\StuddyBuddyLogo.png">
+  <title>Secure Steps - About Us</title>
+  <link rel="icon" href="">
   <link rel="stylesheet" href="style.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1331485902870287"
      crossorigin="anonymous"></script>
