--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StuddyBuddy</title>
-  <link rel="icon" href="images\StuddyBuddyLogo.png">
+  <title>Secure Steps</title>
+  <link rel="icon" href="">
   <link rel="stylesheet" href="style.css" />
   
 </head>
