--- a/about.html
+++ b/about.html
@@ -38,7 +38,21 @@
   <main>
     <section class="hero">
       <h2>About Us</h2>
-      <p>Max Sam and Cody.</p>
+      <br>
+      <h3>Sam</h3>
+      <p>
+        Sam is an awesome role model, he is smart, and he is very hardworking. Sam is the awesome researcher and provides the information for the website. He constructed the paragraphs and worked very hard to strive for a great website!
+      </p>
+      <br>
+      <h3>Cody</h3>
+      <p>
+        Cody is the digital technician of this organization and he constructed a large part of this website. Cody worked extremely hard to make this website the best he can be and always strived for the best in this project. He gave up many free days just to work on the assignment and to help the group.
+      </p>
+      <br>
+      <h3>Max</h3>
+      <p>
+        Max is the digital design engineer who astronomically improved the scaffold of the website. He constructed the banners, the drop boxes and the overall design of the website. He urged the group to keep working and to make everything perfect.
+      </p>
     </section>
   </main>
 
