--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 </head>
 <body id = "Main">
   <header>
-    <div class="nav-container">
+   <div class="nav-container">
       <h1 class="logo" onclick="poopypants()"><a class="logo" href="index.html">SecureSteps</a></h1>
       <nav>
-      <ul class="nav-links">
+        <ul class="nav-links">
               <a href="restrict.html">
                 Restrict
                 <img src="https://cdn-icons-png.flaticon.com/512/5723/5723525.png" alt="" class="icon"> 
@@ -28,7 +28,10 @@
                   Resolve
                  <img src="https://png.pngtree.com/png-vector/20220516/ourmid/pngtree-vector-hammer-cartoon-icon-isolated-diy-hammer-illustration-vector-png-image_36535424.png" alt="" class="icon"> 
                 </a>
-          <li><a href="references.html">Bibliography</a></li>
+                <a href="references.html">
+                  References
+                 <img src="https://images.emojiterra.com/google/android-10/512px/1f4d6.png" alt="" class="icon"> 
+                </a>
           <li><a href="about.html">About Us</a></li>
         </ul>
       </nav>
