--- a/restrict.html
+++ b/restrict.html
@@ -25,7 +25,10 @@
                   Resolve
                  <img src="https://png.pngtree.com/png-vector/20220516/ourmid/pngtree-vector-hammer-cartoon-icon-isolated-diy-hammer-illustration-vector-png-image_36535424.png" alt="" class="icon"> 
                 </a>
-          <li><a href="references.html">Bibliography</a></li>
+                <a href="references.html">
+                  References
+                 <img src="https://images.emojiterra.com/google/android-10/512px/1f4d6.png" alt="" class="icon"> 
+                </a>
           <li><a href="about.html">About Us</a></li>
         </ul>
       </nav>
