Updated about us so know it looks good

--- a/about.html
+++ b/about.html
@@ -40,22 +40,28 @@
 
   <main>
     <section class="hero">
-      <h2>About Us</h2>
-      <br>
-      <h3>Sam</h3>
-      <p>
-        Sam is an awesome role model, he is smart, and he is very hardworking. Sam is the awesome researcher and provides the information for the website. He constructed the paragraphs and worked very hard to strive for a great website!
-      </p>
-      <br>
       <h3>Cody</h3>
-      <p>
-        Cody is the digital technician of this organization and he constructed a large part of this website. Cody worked extremely hard to make this website the best he can be and always strived for the best in this project. He gave up many free days just to work on the assignment and to help the group.
-      </p>
-      <br>
-      <h3>Max</h3>
-      <p>
-        Max is the digital design engineer who astronomically improved the scaffold of the website. He constructed the banners, the drop boxes and the overall design of the website. He urged the group to keep working and to make everything perfect.
-      </p>
+      <h1>About Us</h1>
+      <div class="tool-grid">
+        <div href="" class="tool-tile with-image">
+          <span>Sam</span>
+          <p style="font-weight: normal;">
+            Sam is an awesome role model, who's smart and very hardworking. Sam was the author of many of our pages, spending hours making sure that this vital information was perfect for our audience, and conveyed our messages perfectly. 
+          </p>
+        </div>
+        <div href="" class="tool-tile with-image">
+          <span>Cody</span>
+          <p style="font-weight: normal;">
+            Cody is the digital technician of this organization and he constructed a large part of this website. Cody worked extremely hard to make this website the best it can be and always strived for the perfect result in this project. He gave up hours of his free time perfecting the website, making sure that the design of our website wouldn't hold back the message from getting though, but elevate it to our readers, making it more accesable then ever.
+          </p>
+        </div>
+        <div href="" class="tool-tile with-image">
+          <span>Max</span>
+          <p style="font-weight: normal;">
+            Max is the digital design engineer who astronomically improved the scaffold of the website. He constructed the banners, the drop boxes and played a huge role in the overall design of the website. He urged the group to keep working when we lost sight of our goal and made sure that our website was as good as it could be.
+          </p>
+        </div>
+      </div>
     </section>
   </main>
 
