--- a/about.html
+++ b/about.html
@@ -4,11 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Secure Steps - About Us</title>
-  <link rel="icon" href="">
-  <link rel="stylesheet" href="style.css" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1331485902870287"
-     crossorigin="anonymous"></script>
-  
+  <link rel="icon" href="image.png">
+  <link rel="stylesheet" href="style.css" />  
 </head>
 <body id = "Main">
   <header>
